--- a/layouts/website-special/website-special.html
+++ b/layouts/website-special/website-special.html
@@ -61,7 +61,7 @@
                                                 <div class="uk-width-1-1">
                                                     <div class="uk-margin" uk-margin>
                                                         <div uk-form-custom="target: true">
-                                                            <input type="file">
+                                                            <input type="file" name="photo">
                                                             <input class="uk-input uk-form-width-medium" type="text" placeholder="Upload Agent Photo" name="agentphoto" disabled>
                                                         </div>
                                                     </div>
@@ -69,7 +69,7 @@
                                                 <div class="uk-width-1-1">
                                                     <div class="uk-margin" uk-margin>
                                                         <div uk-form-custom="target: true">
-                                                            <input type="file">
+                                                            <input type="file" name="logo">
                                                             <input class="uk-input uk-form-width-medium" type="text" placeholder="Upload Logo" name="logo" disabled>
                                                         </div>
                                                     </div>
