--- a/layouts/website-special/website-special.html
+++ b/layouts/website-special/website-special.html
@@ -62,7 +62,7 @@
                                                     <div class="uk-margin" uk-margin>
                                                         <div uk-form-custom="target: true">
                                                             <input type="file" name="photo">
-                                                            <input class="uk-input uk-form-width-medium" type="text" placeholder="Upload Agent Photo" name="agentphoto" disabled>
+                                                            <input class="uk-input uk-form-width-medium" type="text" placeholder="Upload Agent Photo" name="photo" disabled>
                                                         </div>
                                                     </div>
                                                 </div>
